feat: add validation step to ensure package name is scoped to @infinitibit_gmbh organization

--- a/.github/workflows/js-ts-release.yml
+++ b/.github/workflows/js-ts-release.yml
@@ -190,6 +190,22 @@ jobs:
           Write-Host "✅ Found $($binaries.Count) platform binary(ies):"
           $binaries | ForEach-Object { Write-Host "  - $_" }
 
+      - name: Verify package name matches organization
+        working-directory: javascript
+        run: |
+          PACKAGE_NAME=$(node -p "require('./package.json').name" 2>/dev/null || echo "INVALID")
+          echo "📦 Package name: $PACKAGE_NAME"
+          
+          # Validate package name is scoped to @infinitibit_gmbh organization
+          if [[ "$PACKAGE_NAME" != @infinitibit_gmbh/* ]]; then
+            echo "::error::❌ Package MUST be scoped to @infinitibit_gmbh organization"
+            echo "::error::Expected: @infinitibit_gmbh/<package-name>"
+            echo "::error::Got: $PACKAGE_NAME"
+            exit 1
+          fi
+          
+          echo "::notice::✅ Package correctly scoped to @infinitibit_gmbh organization"
+
       - name: Preflight validation (dry-run)
         working-directory: javascript
         run: |
